--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1001,5 +1001,7 @@
     
     <!-- Fix for Goodix Reset on Every Reboot -->
     <bool name="config_cleanupUnusedFingerprints">false</bool>
- 
+
+    <!-- Whether the device has outdated qti-telephony-common.jar -->
+    <bool name="config_oldQtiTelephony">false</bool> 
 </resources>
